--- a/core/.env.example
+++ b/core/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=sql.freedb.tech
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=freedb_cryptobloom
-DB_USERNAME=freedb_crypto
-DB_PASSWORD=U5A9D#4MBs$TFme
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
