--- a/core/.env.example
+++ b/core/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=sql.freedb.tech
+DB_HOST=YOUR_DB_HOST
 DB_PORT=3306
-DB_DATABASE=freedb_cryptobloom
-DB_USERNAME=freedb_crypto
-DB_PASSWORD=U5A9D#4MBs$TFme
+DB_DATABASE=YOUR_DB_NAME
+DB_USERNAME=YOUR_DB_USER
+DB_PASSWORD=YOUR_DB_PASSWORD
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
