--- a/composer.json
+++ b/composer.json
@@ -1,2 +1,21 @@
 {
+    "name": "danielomotayo69/cryptobloom",
+    "description": "Cryptobloom: A cryptocurrency trading and management platform",
+    "type": "project",
+    "require": {
+        "php": ">=7.4"
+    },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Daniel Omotayo",
+            "email": "danielomotayo69@gmail.com"
+        }
+    ],
+    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "App\\": "core/"
+        }
+    }
 }
