--- a/core/composer.json
+++ b/core/composer.json
@@ -3,7 +3,8 @@
     "description": "Cryptobloom: A cryptocurrency trading and management platform",
     "type": "project",
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "laravel/framework": "^7.0"
     },
     "license": "MIT",
     "authors": [
@@ -15,7 +16,7 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
-            "App\\": "core/"
+            "App\\": "app/"
         }
     }
 }
