Reorganize Laravel project for Render deployment

--- a/core/.env.example
+++ b/core/.env.example
@@ -1,17 +1,14 @@
-APP_NAME=Laravel
-APP_ENV=local
+
+APP_NAME=Cryptobloom
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://cryptobloom.onrender.com
 
 LOG_CHANNEL=stack
 
+# Database (credentials provided by Render env vars)
 DB_CONNECTION=mysql
-DB_HOST=sql.freedb.tech
-DB_PORT=3306
-DB_DATABASE=freedb_cryptobloom
-DB_USERNAME=freedb_crypto
-DB_PASSWORD=U5A9D#4MBs$TFme
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
